--- a/content/lesson02.ipynb
+++ b/content/lesson02.ipynb
@@ -24,6 +24,16 @@
     "df = pd.DataFrame(data)\n",
     "print(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.head()) # first five rows\n",
+    "print(df.tail()) # last five rows"
+   ]
   }
  ],
  "metadata": {
